11.6: Update code for Citizens expansion.